LEXEVS-2314 Updated scripts to include MAVEN_OPTS and ANT_OPTS settings.