@@ -2,6 +2,9 @@ BUILDDIR='/build'
 
 mkdir $BUILDDIR && cd $BUILDDIR
 
+export MAVEN_OPTS="-Dhttps.protocols=TLSv1.1,TLSv1.2 -Dforce.http.jre.executor=true -Xmx3072m -XX:MaxPermSize=752m"
+export ANT_OPTS="-Dhttps.protocols=TLSv1.1,TLSv1.2 -Dforce.http.jre.executor=true -Xmx3072m -XX:MaxPermSize=752m"
+
 # LexEVS
 git clone -b $LEXEVS_BRANCH $LEXEVS_REPO && \
     cd lexevs && \
